--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,6 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  -title : "공부용 블로그"
+   url : https://geowan.tistory.com/
+  -title : "TIL"  
+   url : /TIL/
