--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,9 @@
 # main links
+
 main:
-  -title : "공부용 블로그"
-   url : https://geowan.tistory.com/
-  -title : "TIL"  
-   url : /TIL/
+  - title: "Home"
+    url: https://JinHoooooou.github.io
+  - title: "About"
+    url: /about/
+  - title: "블로그 만들기"
+    url: /MakingBlog/
