--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ subtitle                 : "Version 1.0" # site tagline that appears below site 
 name                     : "DOGEUMLEE"
 description              : "An amazing website."
 url                      : "https://kyunyan.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "study" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/senior-couple-4723737_640.jpg" # 홈페이지 기본 티져 이미지 # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
